--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
+	        	<li><a href="/Research">About</a></li>
+			<li><a href="/Publications">CV</a></li>
+			<li><a href="/Lab Members">CV</a></li>
+        		<li><a href="/Alumni">CV</a></li>
+        		<li><a href="/Contact">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
