--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 		<nav>
     		<ul>
         		<li><a href="/">Home</a></li>
-	        	<li><a href="/Research">About</a></li>
-			<li><a href="/Publications">CV</a></li>
-			<li><a href="/Lab Members">CV</a></li>
-        		<li><a href="/Alumni">CV</a></li>
-        		<li><a href="/Contact">Blog</a></li>
+	        	<li><a href="/Research">Research</a></li>
+			<li><a href="/Publications">Publications</a></li>
+			<li><a href="/Lab Members">Lab Members</a></li>
+        		<li><a href="/Alumni">Alumni</a></li>
+        		<li><a href="/Contact">Contact</a></li>
     		</ul>
 		</nav>
 		<div class="container">
@@ -24,8 +24,7 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		
 			</ul>
 		</footer>
 	</body>
