--- a/index.html
+++ b/index.html
@@ -1,31 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>REYNOIRD LAB</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/Research">Research</a></li>
-			<li><a href="/Publications">Publications</a></li>
-			<li><a href="/Lab Members">Lab Members</a></li>
-        		<li><a href="/Alumni">Alumni</a></li>
-        		<li><a href="/Contact">Contact</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Welcome to the REYNOIRD lab!</h1>
-				<p>Lysine methylation-based cell signaling in cancer</p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: REYNOIRD Lab
+---
+<div class="blurb">
+	<h1>Welcome to the REYNOIRD lab!</h1>
+	<p>Lysine methylation-based cell signaling in cancer</p>
+</div><!-- /.blurb -->
