--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: REYNOIRD Lab
 ---
 <div class="blurb">
 	<h1>Welcome to the REYNOIRD lab!</h1>
-	<h2>Lysine methylation-based cell signaling in cancer</h2>
+	<h2><i>Lysine methylation-based cell signaling in cancer</i></h2>
 	
 <h3>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</h3>
 	
