--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@ title: REYNOIRD Lab
 	
 	
 <h3>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</h3>
+<p align="center">
+  <img src="https://github.com/Reynoird-Lab/Reynoird-lab.github.io/blob/master/Lukinovic%20V%20graphical%20abstract%20CMYK_revision.png" width="350" title="hover text">
+  
+</p>	
 	
 <h3>Lysine methylation is a covalent post-translational protein modification (PTM) contributing to all aspects of cell biology. Lysine methylation signaling is a dynamic process thanks to the lysine methyltransferases (KMTs, catalyzing addition of methyl groups), lysine demethylases (KDMs, erasing such modifications) and specific methyl-binders (promoting appropriate responses). Lysine methylation of histone proteins are known to fundamentally regulate chromatin function, however there is a growing appreciation that a number of non-histone proteins undergo lysine methylation. Thus, it is likely that many proteins involved in cell homeostasis are methylated and that deregulation in protein methylation signaling may play a role in various diseases. Despite the fundamental role for this modification in biology, relatively few protein lysine methylation substrates have been identified and the function of lysine methylation signaling rarely characterized.</h3>
 	
