--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: REYNOIRD Lab
 	
 	
 <p align="center">
-  <img src="https://github.com/Reynoird-Lab/Reynoird-lab.github.io/blob/master/Lukinovic%20V%20graphical%20abstract%20CMYK_revision.png" width="350" title="hover text">
+  <img src="Lukinovic%20V%20graphical%20abstract%20CMYK_revision.png" width="350" title="Lysine Methylation Signaling">
   </p>		
 <h3>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</h3>
 	
