--- a/Publications/index.html
+++ b/Publications/index.html
@@ -3,5 +3,25 @@ layout: default
 title: Publications
 ---
 	<h1>{{ page.title }}</h1>
+
+<p>
+- Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, Curr Protein Pept Sci, 2020
+- Nut Directs p300-Dependent, Genome-Wide H4 Hyperacetylation in Male Germ Cells, H Shiota, S Barral, T Buchou, M Tan, Y Couté, G Charbonnier, N Reynoird, et al., Cell Rep., 2018
+- Lysine methylation signaling in pancreatic cancer, G Roth, A Casanova, N Lemonnier and N Reynoird, Curr opin oncol, 2018.
+- Bromodomain factors of BET family are new essential actors of pericentric heterochromatin transcriptional activation in response to heat shock, E Col, N Hoghoughi, S Dufour, J Penin, S Koskas, V Faure, M Ouzounova, H Hernandez-Vargash, N Reynoird, et al., Sci. Rep., 2017
+- Novel insights into the oncogenic function of the SMYD3 lysine methyltransferase, P Mazur, O Gozani, J Sage and N Reynoird, Transl Cancer Res., 2016
+- Coordination of stress signals by the lysine methyltransferase SMYD2 promotes pancreatic cancer, N Reynoird*, P Mazur* et al., Gene & Dev, 2016. *equal contribution
+- A Proteomic Strategy Identifies Lysine Methylation of Splicing Factor snRNP70 by SETMAR, SM Carlson, KE Moore, SM Sankaran, N Reynoird, et al., J Biol Chem, 2015.
+- Nuclear PI5P, Uhrf1, and the Road Not Taken, N Reynoird & O Gozani, Mol Cell, 2014. Preview 
+- SMYD3 links lysine methylation of MAP3K2 to Ras-driven cancer, P Mazur*, N Reynoird* et al., Nature, 2014. *equal contribution
+- SMYD3 regulates cancer cell phenotypes and catalyses histone H4 lysine 5 methylation, G Van Aller*, N Reynoird*, O Barbash* et al., Epigenetics, 2012 *equal contribution
+- Differentiation of NUT Midline Carcinoma by Epigenomic Reprogramming, B Schwartz, M Hofer, M Lemieux, D Bauer, M Cameron, N West, E Agoston, N Reynoird et al., Cancer Research, 2011
+- Oncogenesis by sequestration of CBP/p300 in transcriptionally inactive hyperacetylated chromatin domains, N Reynoird et al., EMBO J, 2010
+- Molecular models for post-meiotic male genome reprogramming, S Rousseaux, F Boussouar, J Gaucher, N Reynoird, et al., Systems Biology in Reproductive Medicine, 2010 
+- Perturbations epigénétiques et cancer : nouvelles stratégies anti-cancéreuses, N Reynoird, et al., Bulletin du Cancer, 2010
+- From meiosis to postmeiotic events: The secrets of histone disappearance, J Gaucher, N Reynoird, et al., FEBS J, 2010. Review
+- Intrusion of male epigenome regulators in somatic cancer cells, S Rousseaux, N Reynoird, et al., Medecine Sciences, 2008. Review
+- Epigenetic reprogramming of the male genome during gametogenesis and in the zygote, S Rousseaux, N Reynoird, et al., Reprod Biomed Online, 2008. Review
+</p>
+
 	
-<footpage> </footpage>
