--- a/Publications/index.html
+++ b/Publications/index.html
@@ -4,7 +4,7 @@ title: Publications
 ---
 	<h1>{{ page.title }}</h1>
 
-<h2> Main group publications </h2>
+<h2> <i> Main group publications </i> </h2>
 <p>
 - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, Curr Protein Pept Sci, 2020 <br>
 - Lysine methylation signaling in pancreatic cancer, G Roth, A Casanova, N Lemonnier and N Reynoird, Curr opin oncol, 2018 <br>
@@ -14,8 +14,8 @@ title: Publications
 - SMYD3 links lysine methylation of MAP3K2 to Ras-driven cancer, P Mazur*, N Reynoird* et al., Nature, 2014. *equal contribution <br>
 - SMYD3 regulates cancer cell phenotypes and catalyses histone H4 lysine 5 methylation, G Van Aller*, N Reynoird*, O Barbash* et al., Epigenetics, 2012 *equal contribution <br>
 </p>
-
-<h2> Other publications </h2>
+<br>
+<h2> <i> Other publications </i> </h2>
 <p>
 - Nut Directs p300-Dependent, Genome-Wide H4 Hyperacetylation in Male Germ Cells, H Shiota, S Barral, T Buchou, M Tan, Y Couté, G Charbonnier, N Reynoird, et al., Cell Rep., 2018 <br>
 - Bromodomain factors of BET family are new essential actors of pericentric heterochromatin transcriptional activation in response to heat shock, E Col, N Hoghoughi, S Dufour, J Penin, S Koskas, V Faure, M Ouzounova, H Hernandez-Vargash, N Reynoird, et al., Sci. Rep., 2017 <br>
