--- a/Publications/index.html
+++ b/Publications/index.html
@@ -6,7 +6,7 @@ title: Publications
 
 <h2> <i> Main group publications </i> </h2>
 <p>
-- Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, Curr Protein Pept Sci, 2020 <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/31894745/"> title="- Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, Curr Protein Pept Sci, 2020"> </a <br>
 - Lysine methylation signaling in pancreatic cancer, G Roth, A Casanova, N Lemonnier and N Reynoird, Curr opin oncol, 2018 <br>
 - Novel insights into the oncogenic function of the SMYD3 lysine methyltransferase, P Mazur, O Gozani, J Sage and N Reynoird, Transl Cancer Res., 2016 <br>
 - Coordination of stress signals by the lysine methyltransferase SMYD2 promotes pancreatic cancer, N Reynoird*, P Mazur* et al., Gene & Dev, 2016. *equal contribution <br>
