--- a/Publications/index.html
+++ b/Publications/index.html
@@ -6,13 +6,13 @@ title: Publications
 
 <h2> <i> Main group publications </i> </h2>
 <p>
-<a href="https://pubmed.ncbi.nlm.nih.gov/31894745/"> title="- Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, Curr Protein Pept Sci, 2020"> </a <br>
-- Lysine methylation signaling in pancreatic cancer, G Roth, A Casanova, N Lemonnier and N Reynoird, Curr opin oncol, 2018 <br>
-- Novel insights into the oncogenic function of the SMYD3 lysine methyltransferase, P Mazur, O Gozani, J Sage and N Reynoird, Transl Cancer Res., 2016 <br>
-- Coordination of stress signals by the lysine methyltransferase SMYD2 promotes pancreatic cancer, N Reynoird*, P Mazur* et al., Gene & Dev, 2016. *equal contribution <br>
-- A Proteomic Strategy Identifies Lysine Methylation of Splicing Factor snRNP70 by SETMAR, SM Carlson, KE Moore, SM Sankaran, N Reynoird, et al., J Biol Chem, 2015 <br>
-- SMYD3 links lysine methylation of MAP3K2 to Ras-driven cancer, P Mazur*, N Reynoird* et al., Nature, 2014. *equal contribution <br>
-- SMYD3 regulates cancer cell phenotypes and catalyses histone H4 lysine 5 methylation, G Van Aller*, N Reynoird*, O Barbash* et al., Epigenetics, 2012 *equal contribution <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/31894745/"> - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, Curr Protein Pept Sci, 2020 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/29076964/"> - Lysine methylation signaling in pancreatic cancer, G Roth, A Casanova, N Lemonnier and N Reynoird, Curr opin oncol, 2018 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/30713830/"> - Novel insights into the oncogenic function of the SMYD3 lysine methyltransferase, P Mazur, O Gozani, J Sage and N Reynoird, Transl Cancer Res., 2016 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/26988419/"> - Coordination of stress signals by the lysine methyltransferase SMYD2 promotes pancreatic cancer, N Reynoird*, P Mazur* et al., Gene & Dev, 2016. *equal contribution </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/25795785/"> - A Proteomic Strategy Identifies Lysine Methylation of Splicing Factor snRNP70 by SETMAR, SM Carlson, KE Moore, SM Sankaran, N Reynoird, et al., J Biol Chem, 2015 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/24847881/"> - SMYD3 links lysine methylation of MAP3K2 to Ras-driven cancer, P Mazur*, N Reynoird* et al., Nature, 2014. *equal contribution </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/22419068/"> - SMYD3 regulates cancer cell phenotypes and catalyses histone H4 lysine 5 methylation, G Van Aller*, N Reynoird*, O Barbash* et al., Epigenetics, 2012 *equal contribution </a <br>
 </p>
 <br>
 <h2> <i> Other publications </i> </h2>
