--- a/Publications/index.html
+++ b/Publications/index.html
@@ -17,14 +17,12 @@ title: Publications
 <br>
 <h2> <i> Other publications </i> </h2>
 <p>
-- Nut Directs p300-Dependent, Genome-Wide H4 Hyperacetylation in Male Germ Cells, H Shiota, S Barral, T Buchou, M Tan, Y Couté, G Charbonnier, N Reynoird, et al., Cell Rep., 2018 <br>
-- Bromodomain factors of BET family are new essential actors of pericentric heterochromatin transcriptional activation in response to heat shock, E Col, N Hoghoughi, S Dufour, J Penin, S Koskas, V Faure, M Ouzounova, H Hernandez-Vargash, N Reynoird, et al., Sci. Rep., 2017 <br>
-- Nuclear PI5P, Uhrf1, and the Road Not Taken, N Reynoird & O Gozani, Mol Cell, 2014. Preview <br>
-- Differentiation of NUT Midline Carcinoma by Epigenomic Reprogramming, B Schwartz, M Hofer, M Lemieux, D Bauer, M Cameron, N West, E Agoston, N Reynoird et al., Cancer Research, 2011 <br>
-- Oncogenesis by sequestration of CBP/p300 in transcriptionally inactive hyperacetylated chromatin domains, N Reynoird et al., EMBO J, 2010 <br>
-- Molecular models for post-meiotic male genome reprogramming, S Rousseaux, F Boussouar, J Gaucher, N Reynoird, et al., Systems Biology in Reproductive Medicine, 2010 <br>
-- Perturbations epigénétiques et cancer : nouvelles stratégies anti-cancéreuses, N Reynoird, et al., Bulletin du Cancer, 2010 <br>
-- From meiosis to postmeiotic events: The secrets of histone disappearance, J Gaucher, N Reynoird, et al., FEBS J, 2010. Review <br>
-- Intrusion of male epigenome regulators in somatic cancer cells, S Rousseaux, N Reynoird, et al., Medecine Sciences, 2008. Review <br>
-- Epigenetic reprogramming of the male genome during gametogenesis and in the zygote, S Rousseaux, N Reynoird, et al., Reprod Biomed Online, 2008. Review <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/30257209/"> - Nut Directs p300-Dependent, Genome-Wide H4 Hyperacetylation in Male Germ Cells, H Shiota, S Barral, T Buchou, M Tan, Y Couté, G Charbonnier, N Reynoird, et al., <b>Cell Rep.</b>, 2018 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/28710461/"> - Bromodomain factors of BET family are new essential actors of pericentric heterochromatin transcriptional activation in response to heat shock, E Col, N Hoghoughi, S Dufour, J Penin, S Koskas, V Faure, M Ouzounova, H Hernandez-Vargash, N Reynoird, et al., <b>Sci. Rep.</b>, 2017 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/24950375/"> - Nuclear PI5P, Uhrf1, and the Road Not Taken, N Reynoird & O Gozani, Mol Cell, 2014. Previe </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/21447744/"> - Differentiation of NUT Midline Carcinoma by Epigenomic Reprogramming, B Schwartz, M Hofer, M Lemieux, D Bauer, M Cameron, N West, E Agoston, N Reynoird et al., <b>Cancer Research</b>, 2011 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/20676058/"> - Oncogenesis by sequestration of CBP/p300 in transcriptionally inactive hyperacetylated chromatin domains, N Reynoird et al., <b>EMBO J</b>, 2010 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/21208144/"> - Molecular models for post-meiotic male genome reprogramming, S Rousseaux, F Boussouar, J Gaucher, N Reynoird, et al., <b>Systems Biology in Reproductive Medicine</b>, 2010 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/20015078/"> - From meiosis to postmeiotic events: The secrets of histone disappearance, J Gaucher, N Reynoird, et al., <b>FEBS J</b>, 2010. Review </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/18413057/"> - Epigenetic reprogramming of the male genome during gametogenesis and in the zygote, S Rousseaux, N Reynoird, et al., <b>Reprod Biomed Online</b>, 2008. Review </a <br>
 </p>
