--- a/Publications/index.html
+++ b/Publications/index.html
@@ -2,7 +2,9 @@
 layout: default
 title: Publications
 ---
-	<h1>{{ page.title }}</h1>
+
+<div class="blurb">
+		<h1>{{ page.title }}</h1>
 
 <h2> <i> Main group publications </i> </h2>
 <p>
@@ -26,3 +28,6 @@ title: Publications
 <a href="https://pubmed.ncbi.nlm.nih.gov/20015078/"> - From meiosis to postmeiotic events: The secrets of histone disappearance, J Gaucher, N Reynoird, et al., <b>FEBS J</b>, 2010. Review </a <br>
 <a href="https://pubmed.ncbi.nlm.nih.gov/18413057/"> - Epigenetic reprogramming of the male genome during gametogenesis and in the zygote, S Rousseaux, N Reynoird, et al., <b>Reprod Biomed Online</b>, 2008. Review </a <br>
 </p>
+
+	
+</div><!-- /.blurb -->
