--- a/Publications/index.html
+++ b/Publications/index.html
@@ -19,7 +19,7 @@ title: Publications
 <br>
 <h2> <i> Other publications </i> </h2>
 <p>
-<br> <a href="https://pubmed.ncbi.nlm.nih.gov/30257209/"> - Nut Directs p300-Dependent, Genome-Wide H4 Hyperacetylation in Male Germ Cells, H Shiota, S Barral, T Buchou, M Tan, Y Couté, G Charbonnier, N Reynoird, et al., <b>Cell Rep.</b>, 2018 </a <br>
+<a href="https://pubmed.ncbi.nlm.nih.gov/30257209/"> - Nut Directs p300-Dependent, Genome-Wide H4 Hyperacetylation in Male Germ Cells, H Shiota, S Barral, T Buchou, M Tan, Y Couté, G Charbonnier, N Reynoird, et al., <b>Cell Rep.</b>, 2018 </a <br>
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/28710461/"> - Bromodomain factors of BET family are new essential actors of pericentric heterochromatin transcriptional activation in response to heat shock, E Col, N Hoghoughi, S Dufour, J Penin, S Koskas, V Faure, M Ouzounova, H Hernandez-Vargash, N Reynoird, et al., <b>Sci. Rep.</b>, 2017 </a <br>
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/24950375/"> - Nuclear PI5P, Uhrf1, and the Road Not Taken, N Reynoird & O Gozani, Mol Cell, 2014. Previe </a <br>
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/21447744/"> - Differentiation of NUT Midline Carcinoma by Epigenomic Reprogramming, B Schwartz, M Hofer, M Lemieux, D Bauer, M Cameron, N West, E Agoston, N Reynoird et al., <b>Cancer Research</b>, 2011 </a <br>
