--- a/Publications/index.html
+++ b/Publications/index.html
@@ -4,8 +4,8 @@ title: Publications
 ---
 
 <div class="blurb">
-		<h1>{{ page.title }}</h1>
-
+	<h1>Publications</h1>
+	
 <h2> <i> Main group publications </i> </h2>
 <p>
 <a href="https://pubmed.ncbi.nlm.nih.gov/31894745/"> - Lysine Methyltransferases Signaling: Histones are Just the Tip of the Iceberg, V Lukinovic, A Casanova, G Roth, F Chuffart, N Reynoird, <b>Curr Protein Pept Sci</b>, 2020 </a <br>
