--- a/Contact/index.html
+++ b/Contact/index.html
@@ -5,6 +5,11 @@ title: Contact
 	<h1>{{ page.title }}</h1>
 	
 <p>
+Team "lysine methylation-based cell signaling in cancer"
+REYNOIRD group
+	<a href="mailto:nicolas.reynoird@univ-grenoble-alpes.fr">email</a>
+phone +33 (0)4 76 54 95 76
+	
 <img src="images/IAB.png"> Institute for Advanced Biosciences <br>
 UGA / Inserm U 1209 / CNRS UMR 5309 joint research center<br>
 Site Santé - Allée des Alpes <br>
