--- a/Contact/index.html
+++ b/Contact/index.html
@@ -5,10 +5,10 @@ title: Contact
 	<h1>{{ page.title }}</h1>
 	
 <p>
-Team "lysine methylation-based cell signaling in cancer"
-REYNOIRD group
-	<a href="mailto:nicolas.reynoird@univ-grenoble-alpes.fr">email</a>
-phone +33 (0)4 76 54 95 76
+Team "lysine methylation-based cell signaling in cancer" <br>
+REYNOIRD group <br>
+	<a href="mailto:nicolas.reynoird@univ-grenoble-alpes.fr">email</a> <br>
+phone +33 (0)4 76 54 95 76 <br>
 	
 <img src="images/IAB.png"> Institute for Advanced Biosciences <br>
 UGA / Inserm U 1209 / CNRS UMR 5309 joint research center<br>
