--- a/Contact/index.html
+++ b/Contact/index.html
@@ -10,7 +10,8 @@ REYNOIRD group <br>
 	<a href="mailto:nicolas.reynoird@univ-grenoble-alpes.fr">email</a> <br>
 phone +33 (0)4 76 54 95 76 <br>
 	
-<img src="images/IAB.png"> Institute for Advanced Biosciences <br>
+<img src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png"> <br>
+	Institute for Advanced Biosciences <br>
 UGA / Inserm U 1209 / CNRS UMR 5309 joint research center<br>
 Site Santé - Allée des Alpes <br>
 38700 La Tronche
