--- a/Contact/index.html
+++ b/Contact/index.html
@@ -7,7 +7,7 @@ title: Contact
 <p>
 Team "lysine methylation-based cell signaling in cancer" <br>
 REYNOIRD group <br>
-	<a href="mailto:nicolas.reynoird@univ-grenoble-alpes.fr">email</a> <br>
+	<a href="mailto:nicolas.reynoird@univ-grenoble-alpes.fr">email to N. Reynoird</a> <br>
 phone +33 (0)4 76 54 95 76 <br>
 	
 <img src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png"> <br>
