--- a/Contact/index.html
+++ b/Contact/index.html
@@ -7,11 +7,11 @@ title: Contact
 <p>
 Team "lysine methylation-based cell signaling in cancer" <br>
 REYNOIRD group <br>
-	<a href="mailto:nicolas.reynoird@univ-grenoble-alpes.fr">email to N. Reynoird</a> <br>
+	<br> <a href="mailto:nicolas.reynoird@univ-grenoble-alpes.fr">email to N. Reynoird</a> <br>
 phone +33 (0)4 76 54 95 76 <br>
 	
 <img src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="300"> <br>
-	Institute for Advanced Biosciences <br>
+	<b>Institute for Advanced Biosciences </b><br>
 UGA / Inserm U 1209 / CNRS UMR 5309 joint research center<br>
 Site Santé - Allée des Alpes <br>
 38700 La Tronche
