--- a/Contact/index.html
+++ b/Contact/index.html
@@ -4,13 +4,13 @@ title: Contact
 ---
 	<h1>{{ page.title }}</h1>
 	
-<p>
+
 Team "lysine methylation-based cell signaling in cancer" <br>
 REYNOIRD group <br>
 	<br> <a href="mailto:nicolas.reynoird@univ-grenoble-alpes.fr">email to N. Reynoird</a> <br>
 phone +33 (0)4 76 54 95 76 <br>
 	
-<br> <img src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="300"> <br>
+<p><br> <img src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="300" align="top"> <br>
 	<br><b>Institute for Advanced Biosciences </b><br>
 UGA / Inserm U 1209 / CNRS UMR 5309 joint research center<br>
 Site Santé - Allée des Alpes <br>
