--- a/Contact/index.html
+++ b/Contact/index.html
@@ -10,7 +10,7 @@ REYNOIRD group <br>
 	<br> <a href="mailto:nicolas.reynoird@univ-grenoble-alpes.fr">email to N. Reynoird</a> <br>
 phone +33 (0)4 76 54 95 76 <br>
 	
-<p><br> <img src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="300" align="top"> <br>
+<p><br> <img src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="300" align="top" br clear="left" /> <br>
 	<br><b>Institute for Advanced Biosciences </b><br>
 UGA / Inserm U 1209 / CNRS UMR 5309 joint research center<br>
 Site Santé - Allée des Alpes <br>
