--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: REYNOIRD Lab
 ---
 <div class="blurb">
-	<h1>Welcome to the REYNOIRD lab!</h1>
-	<h2><i>Lysine methylation-based cell signaling in cancer</i></h2>
+	<a align="center" <h1>Welcome to the REYNOIRD lab!</h1> 
+	<h2><i>Lysine methylation-based cell signaling in cancer</i></h2></a>
 	
 <div> 
 <img style="width:40%" src="Images/Lukinovic V graphical abstract CMYK_revision.png" title="Lysine Methylation Signaling" align=”top”> 
