--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: REYNOIRD Lab
 ---
 <div class="blurb">
-	<div align="center" align="justify"  <h1>Welcome to the REYNOIRD lab!</h1> 
+	<div align="center" <h1>Welcome to the REYNOIRD lab!</h1> 
 	<h2><i>Lysine methylation-based cell signaling in cancer</i></h2> </div 
 	
 <div align="left" align="justify" <img style="width:40%" src="Images/Lukinovic V graphical abstract CMYK_revision.png" title="Lysine Methylation Signaling" align="top"> 
