--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 title: REYNOIRD Lab
 ---
 <div class="blurb">
-	<div align="center"<h1>Welcome to the REYNOIRD lab!</h1> 
-<h2><i>Lysine methylation-based cell signaling in cancer</i></h2> </div>
+	<h1>Welcome to the REYNOIRD lab!</h1> 
+<h2><i>Lysine methylation-based cell signaling in cancer</i></h2>
 	
 <div align="left" align="top"> <img style="width:40%" src="Images/Lukinovic V graphical abstract CMYK_revision.png" title="Lysine Methylation Signaling" > 
 	<h2>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</h2> <br>
