--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: REYNOIRD Lab
 ---
 <div class="blurb">
 
-	<h1>Welcome to the REYNOIRD lab!</h1> 
+	<h1> <div align="center" Welcome to the REYNOIRD lab! </div> </h1> 
 <h2><i>Lysine methylation-based cell signaling in cancer</i></h2>
 	
 <img style="width:40%" src="Images/Lukinovic V graphical abstract CMYK_revision.png" title="Lysine Methylation Signaling"><h2>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</h2>
