--- a/Contact/index.html
+++ b/Contact/index.html
@@ -15,6 +15,6 @@ phone +33 (0)4 76 54 95 76 <br>
 UGA / Inserm U 1209 / CNRS UMR 5309 joint research center<br>
 Site Santé - Allée des Alpes <br>
 38700 La Tronche
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2811.4530159533647!2d5.7457081159474!3d45.198167679098674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478af45121b00129%3A0x5d70efc965d6af97!2sInstitute%20for%20Advanced%20Biosciences!5e0!3m2!1sen!2sfr!4v1598276625567!5m2!1sen!2sfr" width="500" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> <div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2811.4530159533647!2d5.7457081159474!3d45.198167679098674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478af45121b00129%3A0x5d70efc965d6af97!2sInstitute%20for%20Advanced%20Biosciences!5e0!3m2!1sen!2sfr!4v1598276625567!5m2!1sen!2sfr" width="500" height="400" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 </div>	
 
