--- a/People/index.html
+++ b/People/index.html
@@ -3,9 +3,13 @@ layout: default
 title: People
 ---
 	<h1>{{ page.title }}</h1>
-	<ul class="posts">
 
-	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-	  {% endfor %}
-	</ul>
+<p
+   Nicolas REYNOIRD, PhD: Groupe Leader
+   <br> 
+Jessica Vayr: Technician
+<br> 
+Tanveer Ahmad, PhD: postdoc
+<br> 
+Alxedandre Casanova: PhD student
+<br> 
