--- a/People/index.html
+++ b/People/index.html
@@ -4,6 +4,7 @@ title: People
 ---
 	<h1>{{ page.title }}</h1>
 
+>img src:"Images/TOM_3906.jpg" width="100%">
 <p>
    Nicolas REYNOIRD, PhD: Groupe Leader
    <br> 
