--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: REYNOIRD Lab
 		<h2><i>Lysine methylation-based cell signaling in cancer</i></h2>
 	
 
-<div><img src="Images/IAB.png" title="IAB"/><p><h2>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</h2></p>
+<div><img src="Images/IAB.png" title="IAB" align="left"/><h2>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</h2>
 </div> 
 
 <img src="Images/Lukinovic V graphical abstract CMYK_revision.png" title="Lysine Methylation Signaling" align="left" width="500" style="margin: 0px 20px 20px 0px;" />
