--- a/People/index.html
+++ b/People/index.html
@@ -4,7 +4,7 @@ title: People
 ---
 	<h1>{{ page.title }}</h1>
 
-<img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="100%"/>
+<img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="500" align="left"/>
 <p>
    Nicolas REYNOIRD, PhD: Groupe Leader
    <br> 
