--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: REYNOIRD Lab
 
 		     <h1> Welcome to the REYNOIRD lab! </h1> 
 
-		<h2><i>Lysine methylation-based cell signaling in cancer</i></h2>
+		<h2>Lysine methylation-based cell signaling in cancer</h2>
 	
 
 <div><img src="Images/IAB.png" title="IAB" align="left" style="margin: 0px 20px 20px 0px;"/><p>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</p>
