--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: REYNOIRD Lab
 		<h2>Lysine methylation-based cell signaling in cancer</h2>
 	
 
-<div><img src="Images/IAB.png" title="IAB" align="left" width="750" style="margin: 0px 20px 20px 0px;"/><p>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</p>
+<div><img src="Images/IAB.png" title="IAB" align="left" width="750" style="margin: 0px 20px 20px 0px;"/><p><i><h2>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</p></i></h2>
 </div> 
 
 <div><img src="Images/Lukinovic V graphical abstract CMYK_revision.png" title="Lysine Methylation Signaling" align="left" width="750" style="margin: 0px 20px 20px 0px;" />
