--- a/index.html
+++ b/index.html
@@ -15,5 +15,5 @@ title: REYNOIRD Lab
 <div><img src="Images/Lukinovic V graphical abstract CMYK_revision.png" title="Lysine Methylation Signaling" align="left" width="700" style="margin: 0px 20px 0px 0px;" />
 <p align="justify"> Our recent works focus on the discovery of new SMYD2 and SMYD3 signaling. We identified several new substrate candidates and we are now in the process of characterizing corresponding new lysine methylation signaling. Meanwhile, we aim to unravel activity of uncharacterized KMTs, as theoretically more than hundred human enzymes can methylate lysines. <br>
 <br> Our group emerged in 2017 and is currently hosted within Pr. Hainaut lab at the Institute for Advanced Biosciences, Grenoble, FRANCE. <br>
-<br> Please feel free to contact us for any discussion and to join us for job opportunity! We will be extremely happy for any collaborations and to welcome you in our laboratory. 
+<br> Please feel free to contact us for any discussion! We will be extremely happy for any collaborations and to welcome you in our laboratory. 
 	</p></div> 
