--- a/People/index.html
+++ b/People/index.html
@@ -5,12 +5,12 @@ title: People
 	<h1>{{ page.title }}</h1>
 
 <img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="250" align="left"/><p>
-   Nicolas REYNOIRD, PhD: Groupe Leader
+   Nicolas REYNOIRD, PhD: Groupe Leader <br> 
    <br> 
-Jessica Vayr: Technician
+Jessica Vayr: Technician <br> 
 <br> 
-Tanveer Ahmad, PhD: postdoc
+Tanveer Ahmad, PhD: postdoc <br> 
 <br> 
-Alxedandre Casanova: PhD student
+Alxedandre Casanova: PhD student <br> 
 <br> 
 	</p>
