--- a/People/index.html
+++ b/People/index.html
@@ -4,13 +4,15 @@ title: People
 ---
 	<h1>{{ page.title }}</h1>
 
-<img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="250" align="left"/><p>
+<img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="250" />
+
+<p>
    Nicolas REYNOIRD, PhD: Groupe Leader <br> 
    <br> 
 Jessica Vayr: Technician <br> 
 <br> 
 Tanveer Ahmad, PhD: postdoc <br> 
 <br> 
-Alxedandre Casanova: PhD student <br> 
+<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="Images/Alexandre_Casanova.jpg" width="100"/> Alexandre Casanova: PhD student <br> 
 <br> 
 	</p>
