--- a/People/index.html
+++ b/People/index.html
@@ -9,10 +9,11 @@ title: People
 <p>
    Nicolas REYNOIRD, PhD: Groupe Leader <br> 
    <br> 
-Jessica Vayr: Technician <br> 
+
+https://www.linkedin.com/in/jessica-vayr-b686bb37/	Jessica Vayr: Technician <br> 
 <br> 
 Tanveer Ahmad, PhD: postdoc <br> 
 <br> 
-<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="Images/Alexandre_Casanova.jpg" width="100"/> Alexandre Casanova: PhD student <br> 
+<a href="https://www.researchgate.net/profile/Alexandre_Casanova" <img alt="AC" src="Images/Alexandre_Casanova.jpg" width="100"/> Alexandre Casanova: PhD student <br> 
 <br> 
 	</p>
