--- a/People/index.html
+++ b/People/index.html
@@ -12,9 +12,9 @@ title: People
 
 https://www.linkedin.com/in/jessica-vayr-b686bb37/	Jessica Vayr: Technician <br> 
 <br> 
-Tanveer Ahmad, PhD: postdoc <br> 
+https://www.researchgate.net/profile/Tanveer_Ahmad31     Tanveer Ahmad, PhD: postdoc <br> 
 <br> 
-<a href="https://www.researchgate.net/profile/Alexandre_Casanova" <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" width="100"/> <p>Alexandre Casanova: PhD student </p><br> 
+<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" align="left" width="100"/></a> <p>Alexandre Casanova: PhD student </p><br> 
 <br> 
 	</p>
 <a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" align="left" width="250"></a>
