--- a/People/index.html
+++ b/People/index.html
@@ -7,14 +7,17 @@ title: People
 <img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="250" />
 
 <p>
-   Nicolas REYNOIRD, PhD: Groupe Leader <br> 
+  https://www.researchgate.net/profile/Nicolas_Reynoird
+	
+	
+	Nicolas REYNOIRD, PhD: Groupe Leader <br> 
    <br> 
 
 https://www.linkedin.com/in/jessica-vayr-b686bb37/	Jessica Vayr: Technician <br> 
 <br> 
 https://www.researchgate.net/profile/Tanveer_Ahmad31     Tanveer Ahmad, PhD: postdoc <br> 
 <br> 
-<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" align="left" width="100"/></a> <p>Alexandre Casanova: PhD student </p><br> 
+<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Alexandre Casanova: PhD student </p><br> 
 <br> 
 	</p>
 <a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" align="left" width="250"></a>
