--- a/People/index.html
+++ b/People/index.html
@@ -4,20 +4,16 @@ title: People
 ---
 	<h1>{{ page.title }}</h1>
 
-<img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="250" />
+<img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="300" /> <img src="https://reynoird-lab.github.io/Images/TOM_3857.jpg" width="300" />
+
 
 <p>
-  https://www.researchgate.net/profile/Nicolas_Reynoird
-	
-	
-	Nicolas REYNOIRD, PhD: Groupe Leader <br> 
+	<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="NR" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p><i>Nicolas REYNOIRD, PhD: <i>Groupe Leader</i></p><br>  
    <br> 
-
-https://www.linkedin.com/in/jessica-vayr-b686bb37/	Jessica Vayr: Technician <br> 
+	<a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Jessica Vayr: <i>Technician</i></p><br> 
 <br> 
-https://www.researchgate.net/profile/Tanveer_Ahmad31     Tanveer Ahmad, PhD: postdoc <br> 
+	<a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Tanveer Ahmad, PhD: <i>postdoc</i></p><br> 
 <br> 
-<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Alexandre Casanova: PhD student </p><br> 
+<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Alexandre Casanova: <i>PhD student</i> </p><br> 
 <br> 
 	</p>
-<a href="https://iab.univ-grenoble-alpes.fr/?language=en"> <img alt="IAB" src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" align="left" width="250"></a>
