--- a/People/index.html
+++ b/People/index.html
@@ -8,9 +8,9 @@ title: People
 
 
 <p>
-	<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="NR" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p><i>Nicolas REYNOIRD, PhD: <i>Groupe Leader</i></p><br>  
+	<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="NR" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jfif" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Nicolas REYNOIRD, PhD: <i>Groupe Leader</i></p><br>  
    <br> 
-	<a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Jessica Vayr: <i>Technician</i></p><br> 
+	<a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jfif" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Jessica Vayr: <i>Technician</i></p><br> 
 <br> 
 	<a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Tanveer Ahmad, PhD: <i>postdoc</i></p><br> 
 <br> 
