--- a/People/index.html
+++ b/People/index.html
@@ -8,12 +8,12 @@ title: People
 
 
 <p>
-	<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="NR" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jfif" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Nicolas REYNOIRD, PhD: <i>Groupe Leader</i></p><br>  
+	<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="NR" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jfif" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> Nicolas REYNOIRD, PhD: <i>Groupe Leader</i><br>  
    <br> 
-	<a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jfif" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Jessica Vayr: <i>Technician</i></p><br> 
+	<a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jfif" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> Jessica Vayr: <i>Technician</i><br> 
 <br> 
-	<a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Tanveer Ahmad, PhD: <i>postdoc</i></p><br> 
+	<a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> Tanveer Ahmad, PhD: <i>postdoc</i><br> 
 <br> 
-<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> <p>Alexandre Casanova: <i>PhD student</i> </p><br> 
+<a href="https://www.researchgate.net/profile/Alexandre_Casanova"> <img alt="AC" src="https://reynoird-lab.github.io/Images/Alexandre_Casanova.jpg" style="margin: 0px 20px 0px 0px;" align="left" width="100"/></a> Alexandre Casanova: <i>PhD student</i><br> 
 <br> 
 	</p>
