--- a/People/index.html
+++ b/People/index.html
@@ -4,11 +4,11 @@ title: People
 ---
 	<h1>{{ page.title }}</h1>
 
-<img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="300" /> <img src="https://reynoird-lab.github.io/Images/TOM_3857.jpg" width="300" />
+<img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="250" /> <img src="https://reynoird-lab.github.io/Images/TOM_3857.jpg" width="250" /> <img src="https://reynoird-lab.github.io/Images/TOM_3373.jpg" width="250" />
 
 
 <p>
-<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="NR" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jfif" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a><p>Nicolas REYNOIRD, PhD: <i>Groupe Leader</i></a><br></p>  
+<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="NR" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jfif" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a><p>Nicolas REYNOIRD, PhD: <i>Group Leader</i></a><br></p>  
 <br><br>  
 <a href="https://www.linkedin.com/in/jessica-vayr-b686bb37/"> <img alt="JV" src="https://reynoird-lab.github.io/Images/Jessica_Vayr.jfif" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p>Jessica Vayr: <i>Technician</i><br></p> 
 <br><br>  
