--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -1,11 +1,17 @@
 ---
 layout: default
-title: Alumni
+title: People
 ---
 	<h1>{{ page.title }}</h1>
-	<ul class="posts">
 
-	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-	  {% endfor %}
-	</ul>
+<p>
+Valentina Lukinovic, postdoctoral researcher<br><br>  
+Gael Roth, MD-PhD student<br><br>  
+Xue Yang, Master 2 student<br><br> 	
+Nour El Hussein, Master 1 student<br><br>
+Lea Baudret, Master 1 student<br><br> 
+Sara Cannito, Master 1 student<br><br>
+Marina Callandret, L3 student<br><br> 
+Nadia Cote, L3 student<br><br> 
+Olivier Leclaire, L3 student<br><br>  
+</p>
