--- a/Contact/index.html
+++ b/Contact/index.html
@@ -17,5 +17,5 @@ phone +33 (0)4 76 54 95 76 <br>
 	<br><b>Institute for Advanced Biosciences </b><br>
 UGA / Inserm U 1209 / CNRS UMR 5309 joint research center<br>
 Site Santé - Allée des Alpes <br>
-38700 La Tronche </p>
+38700 La Tronche, Grenoble, FRANCE </p>
 
