--- a/Contact/index.html
+++ b/Contact/index.html
@@ -13,8 +13,8 @@ phone +33 (0)4 76 54 95 76 <br>
 	
 
 <br> 
-<img src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="300" align="top" br clear="left" /> <br>
-	<br><b>Institute for Advanced Biosciences </b><br>
+<img src="https://reynoird-lab.github.io/Images/IAB%20logo%20coul.png" width="300" align="top" margin: 0px 0px 0px 10px; br clear="left" /> <br>
+	<br><b>Institute for Advanced Biosciences </b>
 UGA / Inserm U 1209 / CNRS UMR 5309 joint research center<br>
 Site Santé - Allée des Alpes <br>
 38700 La Tronche, Grenoble, FRANCE </p>
