--- a/Research/index.html
+++ b/Research/index.html
@@ -4,8 +4,6 @@ title: Research
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="posts">
-
-	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-	  {% endfor %}
-	</ul>
+		
+Our recent works focus on the discovery of new SMYD2 and SMYD3 signaling. We identified several new substrate candidates and we are now in the process of characterizing corresponding new lysine methylation signaling. Meanwhile, we aim to unravel activity of uncharacterized KMTs, as theoretically more than hundred human enzymes can methylate lysines. <br>
+<br>
