--- a/Research/index.html
+++ b/Research/index.html
@@ -4,8 +4,8 @@ title: Research
 ---
 	<h1>{{ page.title }}</h1>
 		
-<img src="https://reynoird-lab.github.io/Images/Lukinovic V graphical abstract CMYK_revision.png" title="Lysine Methylation Signaling" align="left" width="400" style="margin: 0px 20px 20px 0px;" /> 
+<img src="https://reynoird-lab.github.io/Images/Lukinovic V graphical abstract CMYK_revision.png" title="Lysine Methylation Signaling" align="left" width="400" style="margin: 0px 20px 20px 0px;"/> 
 <p align="justify" align="left">Our research aims to identify poorly described and potential KMTs involved in tumorigenesis and to characterize key and novel lysine methylation signaling in human cancer. The vast majority of lysine methyltransferases are still poorly characterized and for the most part their activity is unknown or not thoroughly analyzed. For example, we recently demonstrated that the lysine methyltransferases SMYD3 does not methylate histone H3 as previously claimed in literature, but has a clear oncogenic activity through the methylation of cytoplasmic protein such as the kinase MAP3K2.<br> 
 The long-term goal of our research is to demonstrate the under-appreciated importance of lysine methylation signaling in cell homeostasis and to offer new promising clinical targets for cancer treatment. 
 <br>Our recent works focus on the discovery of new SMYD2 and SMYD3 signaling. We identified several new substrate candidates and we are now in the process of characterizing corresponding new lysine methylation signaling.</p><br>
-<img src="https://reynoird-lab.github.io/Images/research.jpg" title="research" align="left" width="400" style="margin: 0px 20px 20px 0px;" /> 
+<img src="https://reynoird-lab.github.io/Images/research.jpg" title="research" align="left" width="400" style="margin: 0px 20px 20px 0px;" br clear="left" /> 
