--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ title: REYNOIRD Lab
 </div>
 <div><p align="justify" align="left">Lysine methylation is a covalent post-translational modification (PTM) contributing to all aspects of cell biology. Lysine methylation signaling is a dynamic process thanks to the lysine methyltransferases (KMTs, catalyzing addition of methyl groups), lysine demethylases (KDMs, erasing such modifications) and specific methyl-binders (promoting appropriate responses). Lysine methylation of histone proteins are known to fundamentally regulate chromatin function, however there is a growing appreciation that a number of non-histone proteins undergo lysine methylation. Thus, it is likely that many proteins involved in cell homeostasis are methylated and that deregulation in protein methylation signaling may play a role in various diseases. Despite the fundamental role for this modification in biology, relatively few protein lysine methylation substrates have been identified and the function of lysine methylation signaling rarely characterized. <br></div>
 <p align="justify"> Our group emerged in 2017 and is currently hosted within Pr. Hainaut lab at the Institute for Advanced Biosciences, Grenoble, FRANCE. <br>
-Please feel free to contact us for any discussion! We will be extremely happy to welcome you in our laboratory. 
+Please feel free to contact us for any discussion! We will be extremely happy to welcome you in our laboratory for student's internship and we are looking for a PhD & postdoctoral researcher. 
 	</p>
 
