--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ title: REYNOIRD Lab
 
 <div><img src="Images/IAB.png" title="IAB" align="left" width="700" style="margin: 0px 20px 0px 0px;"/><p align="bottom" align="justify"><i><h2>Our laboratory is interested in deciphering new lysine methylation signaling and their implication in human cancer.</p></i></h2>
 </div>
-<div><p align="justify" align="left">Lysine methylation is a covalent post-translational modification (PTM) contributing to all aspects of cell biology, and which deregulation often leads to human pathologies such as cancer. <p align="justify"> Our group emerged in 2017 and is currently hosted within Pr. Hainaut lab at the Institute for Advanced Biosciences, Grenoble, FRANCE. <br>
+<div><p align="justify" align="left">Lysine methylation is a covalent post-translational modification (PTM) contributing to all aspects of cell biology, and which deregulation often leads to human pathologies such as cancer. 
+	Our group was created in 2017 and is currently hosted within Pr. Hainaut lab at the Institute for Advanced Biosciences, Grenoble, FRANCE. <br>
 <br><i>Please feel free to contact us!<br>We will be extremely happy to welcome you in our laboratory for a student internship and we are looking for a PhD & postdoctoral researcher.</i> 
 	</p>
 
