--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -9,11 +9,11 @@ title: Alumni
 <p>
 <a href="https://www.researchgate.net/profile/Valentina_Lukinovic"> <img alt="VL" src="https://reynoird-lab.github.io/Images/valentina_lukinovic.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Valentina Lukinovic</b> <i>postdoctoral researcher</i><br>  
 <a href="https://www.researchgate.net/profile/Gael_Roth"> <img alt=GR" src="https://reynoird-lab.github.io/Images/gaels_roth.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Gael Roth</b> <i>MD-PhD student</i><br> 
-<br><b>Xue Yang</b> <i>Master 2 student</i><br>	
-<br><b>Nour El Hussein</b> <i>Master 1 student</i><br>
-<br><b>Lea Baudret</b> <i>Master 1 student</i><br>
-<br><b>Sara Cannito</b> <i>Master 1 student</i><br>
-<br><b>Marina Callandret</b> <i>L3 student</i><br>
-<br><b>Nadia Cote</b> <i>L3 student</i><br>
-<br><b>Olivier Leclaire </b><i>L3 student</i><br>  
+<br><b><img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Xue Yang</b> <i>Master 2 student</i><br>	
+<br><b><img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Nour El Hussein</b> <i>Master 1 student</i><br>
+<br><b><img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Lea Baudret</b> <i>Master 1 student</i><br>
+<br><b><img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Sara Cannito</b> <i>Master 1 student</i><br>
+<br><b><img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Marina Callandret</b> <i>L3 student</i><br>
+<br><b><img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Nadia Cote</b> <i>L3 student</i><br>
+<br><b><img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/>Olivier Leclaire </b><i>L3 student</i><br>  
 </p>
