--- a/Alumni/index.html
+++ b/Alumni/index.html
@@ -7,21 +7,22 @@ title: Alumni
 <div><img src="https://reynoird-lab.github.io/Images/sortie_resto.jpg" title="group1" align="left" width="325" style="margin: 0px 25px 0px 0px;"/><img src="https://reynoird-lab.github.io/Images/sortie_parc.jpg" title="group2" width="325" /></div>
 
 <p>
+<br>
 		<a href="https://www.researchgate.net/profile/Valentina_Lukinovic"> <img alt="VL" src="https://reynoird-lab.github.io/Images/valentina_lukinovic.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Valentina Lukinovic</b><br> <i>postdoctoral researcher</i></p><br>  
 <br>
 		<a href="https://www.researchgate.net/profile/Gael_Roth"> <img alt=GR" src="https://reynoird-lab.github.io/Images/gael_roth.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Gael Roth</b> <br><i>MD-PhD student</i></p><br> 
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Xue Yang</b> <br><i>Master 2 student</i></p><br>	
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Xue Yang</b> <br><i>Master 2 student</i></p>	
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Nour El Hussein</b> <br><i>Master 1 student</i></p><br>
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Nour El Hussein</b> <br><i>Master 1 student</i></p>
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Lea Baudret</b> <br><i>Master 1 student</i></p><br>
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Lea Baudret</b> <br><i>Master 1 student</i></p>
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Sara Cannito</b> <br><i>Master 1 student</i></p><br>
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Sara Cannito</b> <br><i>Master 1 student</i></p>
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Marina Callandret</b> <br><i>L3 student</i></p><br>
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Marina Callandret</b> <br><i>L3 student</i></p>
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Nadia Cote</b> <br><i>L3 student</i></p><br>
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Nadia Cote</b> <br><i>L3 student</i></p>
 <br>
-		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Olivier Leclaire </b><br><i>L3 student</i></p><br>  
+		<img src="https://reynoird-lab.github.io/Images/logo_scientist.png" style="margin: 0px 20px 10px 0px;" align="left" width="100"/><p><b>Olivier Leclaire </b><br><i>L3 student</i></p>  
 </p>
