--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ title: REYNOIRD Lab
 </div>
 <div><p align="justify" align="left">Lysine methylation is a covalent post-translational modification (PTM) contributing to all aspects of cell biology, and which deregulation often leads to human pathologies such as cancer. 
 	Our group was created in 2017 and is currently hosted within Pr. Hainaut lab at the Institute for Advanced Biosciences, Grenoble, FRANCE. <br>
-<br><i>Please feel free to contact us!<br>We will be extremely happy to welcome you in our laboratory for a student internship. We are also looking for a PhD student or a postdoctoral researcher.</i> 
+<br><i><br>We will be extremely happy to welcome you in our laboratory for a student internship. We are also looking for a PhD student or a postdoctoral researcher. Please feel free to contact us!</i> 
 	</p>
 
