--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@ title: REYNOIRD Lab
 </div>
 <div><p align="justify">Lysine methylation is a covalent post-translational modification (PTM) contributing to all aspects of cell biology, and which deregulation often leads to human pathologies such as cancer. 
 	Our group was created in 2017 and is currently hosted within Pr. Hainaut lab at the Institute for Advanced Biosciences, Grenoble, FRANCE. <br>
-<br><i>We will be extremely happy to welcome you in our laboratory for a student internship. We are also looking for a PhD student or a postdoctoral researcher. Please feel free to contact us! Please provide your CV and a motivation letter describing your research interests.</i> 
+<br><i>We will be extremely happy to welcome you in our laboratory for a student internship. We are also looking for a PhD student or a postdoctoral researcher: please provide your CV and a motivation letter describing your research interests. Feel free to contact us for any inquiries! </i> 
 	</p>
 
