--- a/People/index.html
+++ b/People/index.html
@@ -4,11 +4,11 @@ title: People
 ---
 	<h1>{{ page.title }}</h1>
 
-<img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="215" /> <img src="https://reynoird-lab.github.io/Images/TOM_3857.jpg" width="215" /> <img src="https://reynoird-lab.github.io/Images/TOM_3773.jpg" width="215" />
+<img src="https://reynoird-lab.github.io/Images/TOM_3906.jpg" width="215" alt="Reynoird lab 1"/> <img src="https://reynoird-lab.github.io/Images/TOM_3857.jpg" alt="Reynoird lab 2" width="215" /> <img src="https://reynoird-lab.github.io/Images/TOM_3773.jpg" alt="Reynoird lab 3" width="215" />
 
 <br>
 <p><br>
-<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="NR" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Nicolas REYNOIRD, PhD:</b> <br><i>Group Leader</i><br></p>  
+<a href="https://www.researchgate.net/profile/Nicolas_Reynoird"> <img alt="Nicolas Reynoird" src="https://reynoird-lab.github.io/Images/nicolas_reynoird.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Nicolas REYNOIRD, PhD:</b> <br><i>Group Leader</i><br></p>  
 <br>  
 <a href="https://www.researchgate.net/profile/Tanveer_Ahmad31"> <img alt="TA" src="https://reynoird-lab.github.io/Images/Tanveer_Ahmad.jpg" style="margin: 0px 20px 10px 0px;" align="left" width="100"/></a> <p><b>Tanveer Ahmad, PhD: </b><br><i>Postdoc</i><br></p>
 <br>  
