--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-r---
+---
 layout: default
 title: REYNOIRD Lab
 ---
-<meta name="description" content="The Reynoird Lab focuses its research on lysine methylation signaling in cancer. We are part of the Institute for Advanced Biosciences, based in Grenoble, France." 
+
+<meta name="description" content="The Reynoird Lab focuses its research on lysine methylation signaling in cancer. We are part of the Institute for Advanced Biosciences, based in Grenoble, France."/>
 
 		     <h1> Welcome to the REYNOIRD lab! </h1> 
 
