--- a/Publications/index.html
+++ b/Publications/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Publications
+title: REYNOIRD Lab: Publications
 ---
 <meta name="description" content="Listing of the The Reynoird Lab publications in scientific journals."/>
 
