--- a/Publications/index.html
+++ b/Publications/index.html
@@ -1,11 +1,10 @@
 ---
 layout: default
-title: REYNOIRD Lab: Publications
+title: Publications
 ---
 <meta name="description" content="Listing of the The Reynoird Lab publications in scientific journals."/>
 
-<div class="blurb">
-	<h1>Publications</h1>
+	<h1>REYNOIRD Lab: Publications</h1>
 	
 <h2> <i> Main group publications </i> </h2>
 <p>
@@ -29,6 +28,3 @@ title: REYNOIRD Lab: Publications
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/20015078/"> - From meiosis to postmeiotic events: The secrets of histone disappearance, J Gaucher, N Reynoird, et al., <b>FEBS J</b>, 2010. Review </a <br>
 <br> <a href="https://pubmed.ncbi.nlm.nih.gov/18413057/"> - Epigenetic reprogramming of the male genome during gametogenesis and in the zygote, S Rousseaux, N Reynoird, et al., <b>Reprod Biomed Online</b>, 2008. Review </a <br>
 </p>
-
-	
-</div><!-- /.blurb -->
